gnocchi (1.3.3+2016.01.27.git.e1339d77a9-1) unstable; urgency=medium

  * New upstream release.
  * Fixed python-future version to be >= 0.15.
  * Fixed (build-)depends for this release.
  * Pushes app.wsgi to /usr/share/gnocchi-common.
  * Fixed debian/copyright ordering.
  * Follow upstream rename of GNOCCHI_TEST_INDEXER_URL to GNOCCHI_INDEXER_URL.

 -- Thomas Goirand <zigo@debian.org>  Thu, 21 Jan 2016 12:19:33 +0800

gnocchi (1.3.0-4) unstable; urgency=medium

  * French debconf templates translation update (Closes: #806506).

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Dec 2015 10:21:02 +0100

gnocchi (1.3.0-3) unstable; urgency=medium

  * Added missing dbconfig-common dependency (Closes: #806538).

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Dec 2015 08:22:21 +0000

gnocchi (1.3.0-2) unstable; urgency=medium

  * Adds missing config file: api-paste.ini.
  * Fixed auth_protocol to be http by default.
  * Added debconf translations imported from Glance.

 -- Thomas Goirand <zigo@debian.org>  Wed, 25 Nov 2015 13:18:12 +0000

gnocchi (1.3.0-1) unstable; urgency=medium

  * Initial release. (Closes: #799374)

 -- Thomas Goirand <zigo@debian.org>  Fri, 27 Mar 2015 10:32:47 +0100