@@ -6,6 +6,7 @@ gnocchi (1.3.3+2016.01.27.git.e1339d77a9-1) unstable; urgency=medium
   * Pushes app.wsgi to /usr/share/gnocchi-common.
   * Fixed debian/copyright ordering.
   * Follow upstream rename of GNOCCHI_TEST_INDEXER_URL to GNOCCHI_INDEXER_URL.
+  * Fixed namespaces when generating config file.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 21 Jan 2016 12:19:33 +0800
 
